# mcp-tool-descriptions

./: .gitignore  CLAUDE.md  README.md  dist.env.local  pyproject.toml
docs/api/src/: todo_client.html  todo_server.html
scripts/: generate_docs.py  serve_docs.py
src/: bad_todo_server.py  good_todo_server.py  todo_client.py
