[project]
name = "mcp-todo-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.55.0",
    "fastmcp>=2.9.0",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
]
